# parcellite

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.simple  NEWS  README  README.txt  TODO  _svnversion_test  aclocal.m4  appsuck.sh  autogen.sh  build-debpkg.sh  config.h.in  config.status  configure  configure.ac  configure.in  extract_strings.sh  intltool-merge  intltool-update  parcellite-startup.desktop  parcellite.desktop  rel.common  rel.deb.sh  rel.ppa.sh  rel.sh  scmversion.sh  simple.common  svnversion.sh  uninstall-pre-0.5.py
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in  Makefile.simple  parcellite-startup.desktop.in  parcellite.appdata.xml  parcellite.desktop.in
deb/: control  copyright
doc/: Makefile  Makefile.am  Makefile.in  parcellite.1
m4/: ChangeLog
po/: ChangeLog  Makefile  Makefile.simple  POTFILES.in  ca.po  cs.po  de.po  el.po  es.po  eu.po  fr.po  hu.po  it.po  ja.po  nb.po  parcellite.pot  pl.po  pl_PL.po  pt_BR.po  ro.po  ru.po  sk.po  th.po  tr.po  zh_CN.po  zh_TW.po
rpm/: parcellite.spec
src/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.simple  attr_list.c  attr_list.h  daemon.c  daemon.h  eggaccelerators.c  eggaccelerators.h  history.c  history.clipitem.c  history.clipitem.h  history.h  keybinder.c  main.c  main.clipitem.h  main.h  parcellite-i18n.h  parcellite.h  preferences.c  preferences.h  utils.c  utils.h
trunk/: AUTHORS  TODO  configure.ac  intltool-extract
trunk/data/: Makefile.am  parcellite.desktop.in  parcellite.xpm
trunk/deb/: control
trunk/m4/: ChangeLog
trunk/po/: da.po  de.po  es.po  fr.po  nb.po  pl_PL.po  ru.po  sv.po  tr.po  zh_CN.po
trunk/src/: daemon.h  eggaccelerators.c  eggaccelerators.h  history.c  main.c  preferences.c  utils.c  utils.h
